--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.2",
     "ganache-cli": "^6.12.2",
     "http-server": "^14.1.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "web3": "^1.9.0"
+    "web3": "^4.0.3"
   },
   "name": "nextjs-blog",
   "description": "This is a starter template for [Learn Next.js](https://nextjs.org/learn).",
