--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
+    "@vercel/analytics": "^1.2.2",
     "ganache-cli": "^6.12.2",
     "http-server": "^14.1.1",
     "next": "latest",
